# power_steering

./: claude.md  double_vjp_power.ipynb  download_dataset.py  eval_steering.py  find_power_iteration.py  find_power_iteration_multi.py  generate_steered.py  lambda_cloud.py  main.py  melbo_original.py  melbo_qwen3.py  plot_all_vectors.py  plot_best_by_criterion.py  plot_cosine_sim.py  plot_generation_choices.py  plot_results.py  plot_top1_violin.py  pyproject.toml  run_experiment.py  steering_results_Qwen2-1.5B-Instruct_20260121_015311.csv  steering_results_Qwen3-0.6B_20260120_233803.csv  steering_results_Qwen3-14B_20260121_045315.csv  steering_results_Qwen3-14B_20260121_055820.csv  steering_results_Qwen3-14B_20260121_061929.csv  steering_results_Qwen3-14B_20260121_070642.csv  steering_vectors_Qwen2-1.5B-Instruct_20260121_015311.pt  steering_vectors_Qwen3-0.6B_20260120_233803.pt  steering_vectors_Qwen3-14B_20260121_045315.pt  steering_vectors_Qwen3-14B_20260121_055820.pt  steering_vectors_Qwen3-14B_20260121_061929.pt  steering_vectors_Qwen3-14B_20260121_070642.pt  test_melbo_orthogonal.py  test_qwen.ipynb
archive/: eval_ab_logits.py  eval_multi_power_iter.py  eval_vectors_logit_diff.py  eval_vectors_only.py  evaluate_ab.py  find_caa.py  find_melbo.py  find_power_iteration_caa.py  melbo_original.py  plot_individual_vectors.py  plot_results_filtered.py  power_iteration_steering.py  power_iteration_topk.py  run_caa_experiment.py  run_caa_only.py
data/: corrigibility_eval.json
docs/: caa_experiment_20260127.md  experiment_14B.md  lambda_cloud_walkthrough.md  (+5 more)
(+88 files in other folders)
