[project]
name = "power-steering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "einops>=0.8.0",
    "jax>=0.8.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "transformers-stream-generator>=0.0.5",
]
